apps/homepage-dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-dashboard
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "homepage.example.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    backendRefs:
    - name: homepage-dashboard
      port: 3000
